# vivarium-thing

./: Cargo.toml  README.md  flash.ps1  rust-toolchain.toml
.github/workflows/: firmware.yml
old-code/: main.ino
src/: actuators.rs  config.rs  display.rs  main.rs  millis.rs  relays.rs  sensor.rs  units.rs
