[package]
name = "vivarium"
version = "0.2.0"
authors = ["Jacob Walker <jacobdawalker@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "vivarium"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
nb = "1.1.0"
embedded-hal = "1.0"
avr-device = "0.8.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
opt-level = "s"
debug = false
codegen-units = 1
lto = true

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "s"
